Complete ADV044-ADV047 reconciliation improvements